fix bottom page-nav, box project cards, spacing between cards

--- a/styles/code-gov-design/_filter.scss
+++ b/styles/code-gov-design/_filter.scss
@@ -41,7 +41,7 @@ filter-box {
     margin: 0;
     max-width: 100%;
     padding: 0;
-    width: 258px;
+    width: 100%;
 
     .title-bar {
       background-color: $brand-primary;
